--- a/mblog-web/src/main/webapp/assets/css/style.css
+++ b/mblog-web/src/main/webapp/assets/css/style.css
@@ -185,7 +185,7 @@ label {font-weight: normal;}
 .stream-item:hover {
 	background-color: #fff;
 	padding-right: 13px!important;
-	border-right: 2px solid #00aed1;
+	border-right: 2px solid #5FBFE7;
 	/*box-shadow: 0 0px 5px 2px rgba(0, 0, 0, 0.2);*/
 }
 .p-stream .stream-item:hover {
